--- a/Assignment2P2C.Implementation/Assignment2P2C.Implementation.csproj
+++ b/Assignment2P2C.Implementation/Assignment2P2C.Implementation.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Assignment2P2C.Domain\Assignment2P2C.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
