Implement IoC and DataAccess, BusinessLogic and Services for get transaction

--- a/Assignment2P2C.Web/appsettings.json
+++ b/Assignment2P2C.Web/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TransactionDatabase": "Server=localhost\\SQLEXPRESS; Database=Transaction; Integrated Security=True; Pooling=False;"
+  }
 }
