--- a/Assignment2P2C.Repository.Implementation/Assignment2P2C.Repository.Implementation.csproj
+++ b/Assignment2P2C.Repository.Implementation/Assignment2P2C.Repository.Implementation.csproj
@@ -1,11 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -14,7 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Assignment2P2C.Domain\Assignment2P2C.Domain.csproj" />
+    <ProjectReference Include="..\Assignment2P2C.DataAccess\Assignment2P2C.DataAccess.csproj" />
+    <ProjectReference Include="..\Assignment2P2C.Repository\Assignment2P2C.Repository.csproj" />
   </ItemGroup>
 
 </Project>
