--- a/Assignment2P2C.Web/Assignment2P2C.Web.csproj
+++ b/Assignment2P2C.Web/Assignment2P2C.Web.csproj
@@ -4,4 +4,17 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Assignment2P2C.DataAccess\Assignment2P2C.DataAccess.csproj" />
+    <ProjectReference Include="..\Assignment2P2C.Repository.Implementation\Assignment2P2C.Repository.Implementation.csproj" />
+    <ProjectReference Include="..\Assignment2P2C.Repository\Assignment2P2C.Repository.csproj" />
+    <ProjectReference Include="..\Assignment2P2C.IoC\Assignment2P2C.IoC.csproj" />
+    <ProjectReference Include="..\Assignment2P2C.Services\Assignment2P2C.Services.csproj" />
+    <ProjectReference Include="..\Assignment2P2C.ViewModels\Assignment2P2C.ViewModels.csproj" />
+  </ItemGroup>
+
 </Project>
