Implement transaction importer, utils and logger

--- a/Assignment2P2C.Utils/Assignment2P2C.Utils.csproj
+++ b/Assignment2P2C.Utils/Assignment2P2C.Utils.csproj
@@ -1,7 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="15.0.5" />
+    <PackageReference Include="log4net" Version="2.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Assignment2P2C.Domain\Assignment2P2C.Domain.csproj" />
+    <ProjectReference Include="..\Assignment2P2C.ViewModels\Assignment2P2C.ViewModels.csproj" />
+  </ItemGroup>
 
 </Project>
