--- a/Assignment2P2C.Services.Implementation/Assignment2P2C.Services.Implementation.csproj
+++ b/Assignment2P2C.Services.Implementation/Assignment2P2C.Services.Implementation.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Assignment2P2C.BusinessLogic\Assignment2P2C.BusinessLogic.csproj" />
     <ProjectReference Include="..\Assignment2P2C.Services\Assignment2P2C.Services.csproj" />
+    <ProjectReference Include="..\Assignment2P2C.Utils\Assignment2P2C.Utils.csproj" />
+    <ProjectReference Include="..\Assignment2P2C.ViewModels\Assignment2P2C.ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
