--- a/Assignment2P2C.ViewModels/Assignment2P2C.ViewModels.csproj
+++ b/Assignment2P2C.ViewModels/Assignment2P2C.ViewModels.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Assignment2P2C.Domain\Assignment2P2C.Domain.csproj" />
+    <ProjectReference Include="..\Assignment2P2C.Implementation\Assignment2P2C.Domain.Implementation.csproj" />
   </ItemGroup>
 
 </Project>
