--- a/Assignment2P2C.Services/Assignment2P2C.Services.csproj
+++ b/Assignment2P2C.Services/Assignment2P2C.Services.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Assignment2P2C.Implementation\Assignment2P2C.Domain.Implementation.csproj" />
+    <ProjectReference Include="..\Assignment2P2C.ViewModels\Assignment2P2C.ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
